docs: optimize README.md
Co-authored-by: zhangxunx <422536698@qq.com>